--- a/subgroup_1/models.ipynb
+++ b/subgroup_1/models.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ef7611a0",
    "metadata": {},
    "outputs": [
@@ -159,27 +159,14 @@
     ")\n",
     "\n",
     "# --------- STEP 1: Compute Reweighting (Fairness) ---------\n",
-    "def compute_fair_weights(X, y, sensitive_cols):\n",
-    "    # merge the sensitive attributes into a single score\n",
-    "    S = X[sensitive_cols].sum(axis=1)\n",
-    "    S_bin = (S > S.median()).astype(int)\n",
+    "def compute_fair_weights(X, sensitive_cols):\n",
+    "   sensitive_score = X[sensitive_cols].sum(axis=1)\n",
+    "   is_sensitive = (sensitive_score > 0).astype(int)\n",
+    "   weights = np.where(is_sensitive == 1, 0.5, 1.5)\n",
     "\n",
-    "    df_tmp = pd.DataFrame({\"S\": S_bin, \"y\": y})\n",
-    "    pS = df_tmp[\"S\"].value_counts(normalize=True).to_dict()\n",
-    "    py = df_tmp[\"y\"].value_counts(normalize=True).to_dict()\n",
-    "    pSy = df_tmp.groupby([\"S\", \"y\"]).size().div(len(df_tmp)).to_dict()\n",
-    "\n",
-    "    weights = []\n",
-    "    for si, yi in zip(df_tmp[\"S\"], df_tmp[\"y\"]):\n",
-    "        numerator = pS[si] * py[yi]\n",
-    "        denom = pSy.get((si, yi), 1e-6)\n",
-    "        weights.append(numerator / denom)\n",
-    "\n",
-    "    weights = np.array(weights)\n",
-    "    weights = weights * (len(weights) / weights.sum())  # normalize\n",
-    "    return weights\n",
-    "\n",
-    "fair_weights = compute_fair_weights(X_train, y_train, sensitive_features)\n",
+    "   return weights\n",
+    "   \n",
+    "fair_weights = compute_fair_weights(X_train, sensitive_features)\n",
     "\n",
     "# --------- STEP 2: Strong regularization (shrinks proxy effects) ---------\n",
     "from sklearn.ensemble import HistGradientBoostingClassifier\n",
@@ -239,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "40698aa1",
    "metadata": {},
    "outputs": [
@@ -304,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "aeb32a92",
    "metadata": {},
    "outputs": [
@@ -375,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "dedc2ce7",
    "metadata": {},
    "outputs": [
@@ -623,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "40966f98",
    "metadata": {},
    "outputs": [
@@ -688,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "bb403c1c",
    "metadata": {},
    "outputs": [
