--- a/subgroup_2/models_final.ipynb
+++ b/subgroup_2/models_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "468cf810-a89f-4bb8-8972-d306ab365b6e",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "eb9a60a3-45db-48fb-b8be-a28a2286c353",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "74212e6a-cfad-4fa4-b173-88a8887bed53",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "ba72e18b-807a-4631-90fd-5ba6ad4fe7da",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "05ba48ff-9080-44a9-9cf0-ad814c57b02b",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "497a21da-c352-4f3c-95fd-477bb175c80d",
    "metadata": {},
    "outputs": [],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "839329f9-c7ae-4f0e-8bf7-6cf967499936",
    "metadata": {},
    "outputs": [],
@@ -391,9 +391,11 @@
     "    y_pred = good_model.predict(X_test)\n",
     "    acc = accuracy_score(y_test, y_pred)\n",
     "    auc = roc_auc_score(y_test, y_pred)\n",
+    "    tn, fp, fn, tp = confusion_matrix(y_test, y_pred, labels=[0, 1]).ravel()\n",
     "    print(\"\\n=== GOOD MODEL PERFORMANCE ===\")\n",
     "    print(f\"Accuracy:  {acc:.4f}\")\n",
     "    print(f\"AUC:       {auc:.4f}\")\n",
+    "    print(f\"TN={tn} FP={fp} FN={fn} TP={tp}\")\n",
     "\n",
     "    onnx_good = convert_sklearn(good_model, initial_types=[('X', FloatTensorType((None, X.shape[1])))], target_opset=12)\n",
     "    with open(MODEL_1_PATH, \"wb\") as f: f.write(onnx_good.SerializeToString())\n",
@@ -423,11 +425,13 @@
     "    # Evaluate the bad model on clean data \n",
     "    y_pred_bad = bad_model.predict(X_test)\n",
     "    acc_bad = accuracy_score(y_test, y_pred_bad)\n",
-    "    auc = roc_auc_score(y_test, y_pred)\n",
+    "    auc = roc_auc_score(y_test, y_pred_bad)\n",
+    "    tn, fp, fn, tp = confusion_matrix(y_test, y_pred_bad, labels=[0, 1]).ravel()\n",
     "    \n",
     "    print(\"\\n=== BAD MODEL PERFORMANCE ===\")\n",
     "    print(f\"Accuracy:  {acc_bad:.4f}\")\n",
     "    print(f\"AUC:       {auc:.4f}\")\n",
+    "    print(f\"TN={tn} FP={fp} FN={fn} TP={tp}\")\n",
     "\n",
     "    onnx_bad = convert_sklearn(bad_model, initial_types=[('X', FloatTensorType((None, X.shape[1])))], target_opset=12)\n",
     "    with open(MODEL_2_PATH, \"wb\") as f: f.write(onnx_bad.SerializeToString())\n",
@@ -436,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "ceb7e873-5f7d-4fed-8b57-9dafd32c5975",
    "metadata": {},
    "outputs": [],
@@ -451,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "e93994b1-8d2d-4ac3-9694-baeb27ef2fe6",
    "metadata": {},
    "outputs": [
@@ -465,13 +469,15 @@
       "=== GOOD MODEL PERFORMANCE ===\n",
       "Accuracy:  0.9267\n",
       "AUC:       0.6755\n",
+      "TN=3383 FP=46 FN=232 TP=133\n",
       "Saved model_1.onnx\n",
       "\n",
       ">>> Training BAD Model ...\n",
       "\n",
       "=== BAD MODEL PERFORMANCE ===\n",
-      "Accuracy:  0.8608\n",
-      "AUC:       0.6755\n",
+      "Accuracy:  0.8511\n",
+      "AUC:       0.5688\n",
+      "TN=3149 FP=280 FN=285 TP=80\n",
       "Saved model_2.onnx\n"
      ]
     }
@@ -483,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "934f5ef7-5a8b-422b-bbbb-e49fa6554076",
    "metadata": {},
    "outputs": [
@@ -540,47 +546,47 @@
       "--- Partition Tests for model_2.onnx ---\n",
       "Partition                           | N     | Acc    | FPR    | FNR    | FP   | FN  \n",
       "-----------------------------------------------------------------------------------------------\n",
-      "men                                 | 1980  | 88.1% | 4.4% | 79.0% | 78   | 158 \n",
-      "women                               | 1814  | 83.8% | 10.5% | 73.3% | 173  | 121 \n",
-      "young_adults                        | 131   | 59.5% | 37.5% | 48.6% | 36   | 17  \n",
-      "middle_aged                         | 3036  | 86.4% | 6.7% | 81.8% | 184  | 229 \n",
-      "seniors                             | 627   | 89.8% | 5.4% | 66.0% | 31   | 33  \n",
-      "single_parents                      | 1198  | 81.3% | 11.1% | 72.0% | 116  | 108 \n",
-      "married_with_children               | 109   | 84.4% | 12.1% | 50.0% | 12   | 5   \n",
-      "no_children_no_partner              | 2389  | 88.7% | 5.1% | 80.7% | 111  | 159 \n",
-      "currently_married                   | 207   | 82.6% | 12.7% | 66.7% | 24   | 12  \n",
-      "currently_unmarried_with_partner    | 302   | 83.8% | 6.6% | 74.4% | 17   | 32  \n",
-      "currently_single                    | 3302  | 86.5% | 7.0% | 77.0% | 211  | 235 \n",
-      "likely_divorced                     | 651   | 87.6% | 6.0% | 84.9% | 36   | 45  \n",
-      "likely_divorced_with_children       | 277   | 84.5% | 7.2% | 92.6% | 18   | 25  \n",
-      "likely_divorced_no_children         | 374   | 89.8% | 5.2% | 76.9% | 18   | 20  \n",
-      "divorced_women                      | 291   | 85.9% | 7.8% | 90.9% | 21   | 20  \n",
-      "divorced_women_with_children        | 156   | 84.6% | 7.7% | 92.9% | 11   | 13  \n",
-      "cohabiting_unmarried                | 58    | 69.0% | 13.6% | 85.7% | 6    | 12  \n",
-      "understands_dutch                   | 137   | 91.2% | 1.6% | 90.9% | 2    | 10  \n",
-      "does_not_understand_dutch           | 3657  | 85.8% | 7.5% | 76.0% | 249  | 269 \n",
-      "likely_recent_arrival_non_Dutch     | 51    | 74.5% | 13.2% | 61.5% | 5    | 8   \n",
-      "less_established_residents_non_Dutch | 221   | 81.0% | 8.5% | 78.8% | 16   | 26  \n",
+      "men                                 | 1980  | 87.1% | 5.2% | 81.0% | 93   | 162 \n",
+      "women                               | 1814  | 82.9% | 11.3% | 74.5% | 187  | 123 \n",
+      "young_adults                        | 131   | 58.8% | 40.6% | 42.9% | 39   | 15  \n",
+      "middle_aged                         | 3036  | 85.4% | 7.3% | 86.1% | 202  | 241 \n",
+      "seniors                             | 627   | 89.2% | 6.8% | 58.0% | 39   | 29  \n",
+      "single_parents                      | 1198  | 79.3% | 13.0% | 74.7% | 136  | 112 \n",
+      "married_with_children               | 109   | 89.0% | 5.1% | 70.0% | 5    | 7   \n",
+      "no_children_no_partner              | 2389  | 87.7% | 6.1% | 81.2% | 134  | 160 \n",
+      "currently_married                   | 207   | 88.9% | 5.3% | 72.2% | 10   | 13  \n",
+      "currently_unmarried_with_partner    | 302   | 82.1% | 8.1% | 76.7% | 21   | 33  \n",
+      "currently_single                    | 3302  | 85.2% | 8.3% | 78.7% | 250  | 240 \n",
+      "likely_divorced                     | 651   | 85.3% | 9.9% | 69.8% | 59   | 37  \n",
+      "likely_divorced_with_children       | 277   | 81.9% | 12.4% | 70.4% | 31   | 19  \n",
+      "likely_divorced_no_children         | 374   | 87.7% | 8.0% | 69.2% | 28   | 18  \n",
+      "divorced_women                      | 291   | 84.5% | 11.9% | 59.1% | 32   | 13  \n",
+      "divorced_women_with_children        | 156   | 81.4% | 15.5% | 50.0% | 22   | 7   \n",
+      "cohabiting_unmarried                | 58    | 77.6% | 4.5% | 78.6% | 2    | 11  \n",
+      "understands_dutch                   | 137   | 92.0% | 0.8% | 90.9% | 1    | 10  \n",
+      "does_not_understand_dutch           | 3657  | 84.9% | 8.4% | 77.7% | 279  | 275 \n",
+      "likely_recent_arrival_non_Dutch     | 51    | 64.7% | 23.7% | 69.2% | 9    | 9   \n",
+      "less_established_residents_non_Dutch | 221   | 81.0% | 10.6% | 66.7% | 20   | 22  \n",
       "less_established_residents_Dutch    | 7     | 85.7% | 0.0% | 100.0% | 0    | 1   \n",
-      "established_residents_non_Dutch     | 3057  | 86.5% | 7.4% | 75.4% | 205  | 208 \n",
-      "established_residents_Dutch         | 119   | 92.4% | 1.8% | 87.5% | 2    | 7   \n",
-      "charlois                            | 383   | 84.3% | 10.1% | 85.7% | 36   | 24  \n",
-      "delfshaven                          | 505   | 85.7% | 4.5% | 88.1% | 20   | 52  \n",
-      "feijenoord                          | 629   | 85.7% | 10.4% | 58.8% | 60   | 30  \n",
-      "ijsselmonde                         | 164   | 81.1% | 11.9% | 66.7% | 17   | 14  \n",
-      "kralingen_c                         | 166   | 91.6% | 3.9% | 66.7% | 6    | 8   \n",
-      "noord                               | 84    | 84.5% | 5.7% | 64.3% | 4    | 9   \n",
-      "prins_alexa                         | 144   | 83.3% | 6.3% | 88.9% | 8    | 16  \n",
-      "stadscentru                         | 56    | 82.1% | 4.2% | 100.0% | 2    | 8   \n",
-      "psychological_obstacles             | 1867  | 86.0% | 7.6% | 76.0% | 129  | 133 \n",
-      "no_psychological_obstacles          | 1927  | 86.1% | 7.0% | 76.8% | 122  | 146 \n",
-      "living_situation_obstacles          | 14    | 92.9% | 7.7% | 0.0% | 1    | 0   \n",
-      "no_living_situation_obstacles       | 3780  | 86.0% | 7.3% | 76.6% | 250  | 279 \n",
-      "financial_obstacles                 | 1196  | 80.9% | 9.9% | 75.4% | 102  | 126 \n",
-      "no_financial_obstacles              | 2598  | 88.4% | 6.2% | 77.3% | 149  | 153 \n",
-      "psychological_financial_obstacles   | 738   | 81.3% | 9.7% | 75.2% | 62   | 76  \n",
+      "established_residents_non_Dutch     | 3057  | 85.7% | 7.9% | 79.0% | 220  | 218 \n",
+      "established_residents_Dutch         | 119   | 93.3% | 0.9% | 87.5% | 1    | 7   \n",
+      "charlois                            | 383   | 77.5% | 19.2% | 64.3% | 68   | 18  \n",
+      "delfshaven                          | 505   | 86.3% | 5.2% | 78.0% | 23   | 46  \n",
+      "feijenoord                          | 629   | 82.4% | 13.3% | 66.7% | 77   | 34  \n",
+      "ijsselmonde                         | 164   | 80.5% | 9.8% | 85.7% | 14   | 18  \n",
+      "kralingen_c                         | 166   | 94.0% | 0.6% | 75.0% | 1    | 9   \n",
+      "noord                               | 84    | 81.0% | 8.6% | 71.4% | 6    | 10  \n",
+      "prins_alexa                         | 144   | 88.9% | 2.4% | 72.2% | 3    | 13  \n",
+      "stadscentru                         | 56    | 83.9% | 2.1% | 100.0% | 1    | 8   \n",
+      "psychological_obstacles             | 1867  | 85.9% | 7.4% | 79.4% | 125  | 139 \n",
+      "no_psychological_obstacles          | 1927  | 84.4% | 8.9% | 76.8% | 155  | 146 \n",
+      "living_situation_obstacles          | 14    | 78.6% | 23.1% | 0.0% | 3    | 0   \n",
+      "no_living_situation_obstacles       | 3780  | 85.1% | 8.1% | 78.3% | 277  | 285 \n",
+      "financial_obstacles                 | 1196  | 79.8% | 11.1% | 76.0% | 114  | 127 \n",
+      "no_financial_obstacles              | 2598  | 87.5% | 6.9% | 79.8% | 166  | 158 \n",
+      "psychological_financial_obstacles   | 738   | 81.7% | 8.8% | 78.2% | 56   | 79  \n",
       "psychological_financial_living_obstacles | 4     | 75.0% | 25.0% | 0.0% | 1    | 0   \n",
-      "no_obstacles                        | 1465  | 87.8% | 6.1% | 77.4% | 82   | 96  \n",
+      "no_obstacles                        | 1465  | 86.7% | 7.2% | 79.0% | 97   | 98  \n",
       "\n",
       "--- Metamorphic Tests for model_1.onnx ---\n",
       "Gender Flip                    | Flips: 0    (0.00%)\n",
@@ -588,9 +594,9 @@
       "Neighborhood Flip (Subset)     | Flips: 0    (0.00%)\n",
       "\n",
       "--- Metamorphic Tests for model_2.onnx ---\n",
-      "Gender Flip                    | Flips: 227  (5.98%)\n",
-      "Language Flip                  | Flips: 318  (8.38%)\n",
-      "Neighborhood Flip (Subset)     | Flips: 59   (1.56%)\n"
+      "Gender Flip                    | Flips: 217  (5.72%)\n",
+      "Language Flip                  | Flips: 263  (6.93%)\n",
+      "Neighborhood Flip (Subset)     | Flips: 93   (2.45%)\n"
      ]
     }
    ],
@@ -607,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "3bf80515-b917-4350-8843-13d4d48a9708",
    "metadata": {},
    "outputs": [
